<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddATask">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="165dp"
        android:layout_height="34dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="Add Task"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="My Task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/newTaskBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/do_something"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskTitle" />

    <Button
        android:id="@+id/submitTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addImg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addImg"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/totalTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/total_thingtodo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitTask"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/task_title"
        app:layout_constraintBottom_toTopOf="@+id/newTaskTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="Task Description"
        app:layout_constraintBottom_toTopOf="@+id/newTaskBody"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/taskCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="228dp"
        app:layout_constraintBottom_toBottomOf="@+id/totalTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalTask"
        app:layout_constraintTop_toTopOf="@+id/totalTask" />

    <RadioGroup
        android:id="@+id/buttonBox"
        android:layout_width="158dp"
        android:layout_height="97dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/submitTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toEndOf="@+id/submitTask"
        app:layout_constraintTop_toTopOf="@+id/addImg">

        <RadioButton
            android:id="@+id/redRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#F44336"
            android:text="Red Team"
            android:textColor="#E91E63"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/greenRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#17E320"
            android:text="Green Team"
            android:textColor="#96E639"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/blueRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#208FE6"
            android:text="Blue Team"
            android:textColor="#2196F3"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/addImg"
        android:layout_width="90dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:text="Add Pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskBody" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="83dp"
        android:layout_height="101dp"
        app:layout_constraintBottom_toBottomOf="@+id/newTaskBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newTaskBody"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

</androidx.constraintlayout.widget.ConstraintLayout>